fix: utvid formatprovider med støtte for bedre spacing
Håndter spacing av lister og navigasjonskort bedre.

--- a/portal/src/components/Typography/typography.scss
+++ b/portal/src/components/Typography/typography.scss
@@ -14,22 +14,36 @@
     --blockquote-line-color: #{jkl.$color-skifer};
 }
 
-.jkl-portal-list-item {
-    max-width: rem(750px);
-}
+$_title-max-width: rem(850px);
+$_paragraph-max-width: rem(750px);
 
+.jkl-portal-list-item,
 .jkl-portal-paragraph {
-    max-width: rem(750px);
+    max-width: $_paragraph-max-width;
 
     @include jkl.text-style("body");
+}
 
+.jkl-portal-ul,
+.jkl-portal-ol {
+    &:not(:last-child) {
+        margin-bottom: jkl.$spacing-xl;
+    }
+}
+
+.jkl-portal-nav-card,
+.jkl-portal-paragraph {
     &:not(:last-child) {
         margin-bottom: jkl.$spacing-l;
     }
 }
 
+.jkl-portal-nav-card {
+    max-width: rem(410px);
+}
+
 .jkl-portal-blockquote {
-    max-width: rem(750px);
+    max-width: $_paragraph-max-width;
 
     @include jkl.text-style("heading-3") {
         font-weight: jkl.$typography-weight-normal;
@@ -50,7 +64,7 @@
 }
 
 .jkl-portal-article-lead {
-    max-width: rem(850px);
+    max-width: $_title-max-width;
 
     @include jkl.text-style("heading-2");
 
@@ -65,7 +79,7 @@
 
     line-height: rem(84px);
     font-size: rem(64px);
-    max-width: rem(850px);
+    max-width: $_title-max-width;
     margin-bottom: jkl.$spacing-l;
 
     @include from-medium-device {
@@ -76,7 +90,7 @@
 }
 
 .jkl-portal-page-title {
-    max-width: rem(850px);
+    max-width: $_title-max-width;
     margin-bottom: jkl.$spacing-xl;
 
     @include jkl.text-style("title");
