--- a/portal/src/pages/style.scss
+++ b/portal/src/pages/style.scss
@@ -18,7 +18,3 @@ h3,
 
     scroll-margin-top: $header-height;
 }
-
-.jkl-portal-nav-card {
-    max-width: rem(410px);
-}
